update index.html file, style.css file

--- a/index.html
+++ b/index.html
@@ -195,10 +195,9 @@
                <footer class="modal-footer">
                    <p class="modal-help">Need <a href="#">help ?</a></p>
                </footer>
-
            </div>
        </div>
-   </div>
+    </div>
 
     <script>
        const buyBtns = document.querySelectorAll('.js-buy')
@@ -217,6 +216,8 @@
        }
        modalclose.addEventListener('click',hideshowbuy)
 
-   </script>
+    </script>
     
 </body> 
+</html>
+
